--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav id="navbar">
     <div class="topics">
-        <header><h1>JS Documentation</h1></header>
+        <h1 class="heading">JS Documentation</h1>
         <ul>
             <li id="topic"><a class="nav-link" href="#Introduction">Introduction</a></li>
             <li id="topic"><a class="nav-link" href="#What_you_should_already_know">What you should already know</a></li>
