--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="js.png">
-    <title>Technical Documentation Page</title>
+    <title>Technical Documentation - JavaScript</title>
 </head>
 <body>
     <nav id="navbar">
